--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>周杰伦</title>
     <style>
         img{max-width: 100%;}
@@ -10,11 +10,23 @@
 
 </head>
 <body>
-    <h1>周杰伦</h1>
+
+    <nav>
+        <ul>
+            <li><a href="#jay">个人简介</a></li>
+            <li><a href="#events">重要事件</a></li>
+            <li><a href="#glory">荣誉和成就</a></li>
+            <li><a href="#work">主要作品</a></li>
+            <li><a href="#photo">生活照</a></li>
+            <li><a href="#life">生平</a></li>
+        </ul>
+    </nav>
+
+    <h1 id="jay">周杰伦</h1>
     <p>
         周杰伦出生于1979年1月18日，是台湾华语流行歌曲男歌手、音乐家、编曲家、唱片制片人、魔术师。同时是演员、导演、电子竞技职业战队J Team的老板。
     </p>
-    <h2>重要事件</h2>
+    <h2 id="events">重要事件</h2>
     <p>
         <ul>
             <li>2000年，周杰伦发行了他的首张专辑《Jay》，从属于唱片公司阿尔发音乐。</li>
@@ -26,7 +38,7 @@
             <li>2016年，他再次进入了好莱坞，在电影《惊天魔盗团》中扮演小李。</li>
         </ul>
     </p>
-    <h2>荣誉和成就</h2>
+    <h2 id="glory">荣誉和成就</h2>
     <p>
         <ol>
             <li>2003年2月出道仅三年便接受美国《时代》杂志专访，并成为亚洲版的封面人物。</li>
@@ -40,7 +52,7 @@
             <li>2019年周杰伦在福布斯发布的中国100名人榜，名列第5名。</li>
         </ol>
     </p>
-    <h2>主要作品</h2>
+    <h2 id="work">主要作品</h2>
     <table>
       <thead>
         <tr>
@@ -64,16 +76,22 @@
             <tr><td>2016年</td><td>	周杰伦的床边故事</td></tr>
       </tbody>
     </table>
-    <h2>生活照</h2>
+    <h2 id="photo">生活照</h2>
     
-            <div><img width="400
-            " src="images/jay1.jpg" alt="图一"></div>
-            <div><img width="400
-            " src="images/jay2.jpg" alt="图二"></div>
-            <div><img width="400
-            " src="images/jay3.jpg" alt="图三"></div>
+            <div><a href="images/jay1.jpg" target="_blank">
+                <img width="400
+                " src="images/jay1.jpg" alt="图一">
+            </a></div>
+            <div><a href="images/jay2.jpg" target="_blank">
+                <img width="400
+                " src="images/jay2.jpg" alt="图二">
+            </a></div>
+            <div><a href="images/jay3.jpg" target="_blank">
+                <img width="400
+                " src="images/jay3.jpg" alt="图三">
+            </a></div>
 
-    <h2>生平</h2>
+    <h2 id="life">生平</h2>
     <p>
         周杰伦在台湾台北林口长大。父亲周耀中，当时任教于台北县芦洲国中，教授生物；母亲叶惠美则是林口国中美术教师。
         14岁时父母离异，由父亲担任监护人，年满18岁后选择与母亲共同生活，周杰伦在台湾民视新闻台由胡婉玲主持的节目《
@@ -84,6 +102,9 @@
         周杰伦他自小对音乐表现出浓厚的兴趣，并且喜欢模仿歌星、演员表演和变魔术。3岁开始学习钢琴。周杰伦国小时住在台北市光华商场附近，就读忠孝国小。国中时就读金华国中，
         此时期他的父母因长年争执而决议离婚，使周杰伦的性情大受影响。除了音乐外，周杰伦热爱篮球，他在国中参加篮球队，结识学长陈建州。
     </p>
+    <div style="height: 700px;">
+
+    </div>
 
 </body>
 </html>
